syntax = "proto3";

package pb;

import "msg.proto";

service PubSub {
    rpc Publish(PublishRequest) returns(PublishResponse);
    rpc Subscribe(SubscribeRequest) returns (stream pb.Message);
    rpc PullMessage(stream PullMessageRequest) returns (stream PullMessageResponse);
}

message PublishRequest {
    repeated pb.Message msg = 1;
}

message PublishResponse {

}

message SubscribeRequest {
    uint64 queueId = 1;
}

message PullMessageRequest {
    uint64 queueId = 1;
    int32 numbers = 2;
    uint64 requestId =3;
}

message PullMessageResponse {
    repeated pb.Message msg = 1;
    uint64 responseId = 2;
}